Sun Jun 19 10:54:40 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* variable.c (rb_path_to_class): search the constant at once
	  instead of checking if defined and then getting it.

Sat Jun 18 14:01:40 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* test/rubygems/test_gem_installer.rb: Fixed broken test with extension
	  build. https://github.com/rubygems/rubygems/pull/1645

Sat Jun 18 13:59:54 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems.rb, lib/rubygems/*, test/rubygems/*: Update rubygems
	  HEAD(2c6d256). It contains to update vendored Molinillo to 0.5.0.
	  https://github.com/rubygems/rubygems/pull/1638

Sat Jun 18 10:13:37 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (build-ext), ext/extmk.rb: use variable EXTENCS
	  different than ENCOBJS, to get rid of circular dependency.
	  build libencs when linking encodings statically.
	  [ruby-core:75618] [Bug #12401]

Sat Jun 18 08:52:46 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_getline): fix pointer index
	  overflow.  reported by Guido Vranken <guido AT guidovranken.nl>.

Thu Jun 16 16:35:35 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (Init_class_hierarchy): prevent rb_cObject which is the
	  class tree root, from GC.  [ruby-dev:49666] [Bug #12492]

Thu Jun 16 12:17:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (tr_trans): adjust buffer size by processed and rest
	  lengths, instead of doubling repeatedly.

Thu Jun 16 11:15:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (tr_trans): consider terminator length and fix heap
	  overflow.  reported by Guido Vranken <guido AT guidovranken.nl>.

Thu Jun 16 00:02:32 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_ocsp.c (ossl_ocspreq_verify, ossl_ocspbres_verify):
	  Use ossl_clear_error() so that they don't print warnings to stderr and
	  leak errors in the OpenSSL error queue. Also, check the return value